--- a/templates/reg_items.html
+++ b/templates/reg_items.html
@@ -1,5 +1,5 @@
 {% block section %}
-<form action="/submit_item_post" method="post">
+<form action="/submit_item_post" method="post" enctype="multipart/form-data">
     <div><br><br>
         <label for="name">Item name: </label>
         <input type="text" name="name" id="name" required><br><br>
@@ -12,7 +12,7 @@
     <input type="text" name="addr" id="addr" required><br><br> </div>
     <div>
     <label for="tel">Email: </label>
-    <input type="text" name=”email" id=”email" required><br><br> 
+    <input type="text" name="email" id="email" required><br><br> 
     </div>
     <div>
         <label for="category">Category: </label> 
@@ -43,6 +43,10 @@
 </div> <div>
 <label for="phone">Phone : </label>
 <input type="text" name="phone" id="phone"><br><br> </div>
+<div>
+<label for="img">Representative Image upload : </label>
+<input type="file" name="file" /><br><br>
+</div>
 <input type="submit" value="Submit!"><br><br> </div>
 </form>
 {% endblock section %}
