--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@
     justify-content: space-between; /* 좌우에 요소를 분배 */
     align-items: center; /* 세로 중앙 정렬 */
     padding: 10px; /* 패딩 설정 */
+    position: relative;
 }
 
     /* 왼쪽에 있는 "EwhaMarket" 스타일 */
@@ -21,6 +22,9 @@
     display: flex; /* 요소를 가로로 정렬 */
     margin: 0;
     padding: 0;
+    position: absolute;
+    top: 100%;
+    right: 0;
     justify-content: flex-end; /* 오른쪽 정렬 */
 }
 
