--- a/templates/reg_items.html
+++ b/templates/reg_items.html
@@ -1,3 +1,5 @@
+{% extends "index.html" %}
+
 {% block section %}
 <form action="/submit_item_post" method="post" enctype="multipart/form-data">
     <div><br><br>
