--- a/templates/submit_item_result.html
+++ b/templates/submit_item_result.html
@@ -1,4 +1,6 @@
 {% extends "index.html" %}
+
+{% block section %}
 <p>
     Seller {{data.seller}} sells {{data.name}} and its c
     ategory is {{data.category}}.
@@ -28,4 +30,5 @@ if you are interested!
     {% if data['card'] == "N" %} 
     NOT accepted!
     {% endif %}
-</p>
+</p> 
+{% endblock section %}
